# Glass

./: README.md
20210412/: .gitignore
20210412/alg/: backtracking_sequence_validator.py  dp_knapsack.py  sorting_basics.py
20210412/cpp/: CMakeLists.txt
20210412/cpp/include/: dijkstra.hpp  pseudoinverse.hpp  qr.hpp
20210412/cpp/src/: dijkstra.cpp  pseudoinverse.cpp  qr.cpp
20210412/data/samples/: assignment_matrix.csv  cutting_orders.csv  homography_points.csv  interpolation_points.csv  kabsch_points.csv  least_squares_data.csv  scheduling_jobs.csv
20210412/etc/: logic_config.yaml  weights_default.yml
20210412/lib/: __init__.py  assignment.py  boolean_logic.py  correctness.py  crc.py  cutting_heuristic.sh  exceptions.py  fsm_utils.py  graph_algorithms.py  homography.py  interpolation.py  kabsch.py  least_squares.py  lfsr.py  modular_arithmetic.psm1  protocol.py  reed_solomon.py  scheduling.py  transformations.py
20210412/plc/twincat/src/: FSMParidad.TcPOU
20210412/scripts/: __init__.py  calibration_cli.py  compute_inverse.ps1  correctness_cli.py  evaluate_cli.py  graphs_cli.py  logic_cli.py  optimization_cli.py  polynomial_cli.py
20210412/tests/bash/: test_cutting.sh
20210412/tests/cpp/: test_dijkstra.cpp  test_pseudoinverse.cpp  test_qr.cpp
20210412/tests/powershell/: TestModularArithmetic.Tests.ps1
20210412/tests/python/: test_assignment.py  test_boolean_logic.py  test_correctness.py  test_crc.py  test_graph_algorithms.py  test_interpolation.py  test_protocol.py  test_transformations.py
AAA20240302/: __init__.py
AAA20240302/alg/: __init__.py  backtracking_sequence_validator.py  dp_knapsack.py  sorting_basics.py
AAA20240302/lib/: __init__.py  assignment.py  boolean_logic.py  crc.py  fsm_utils.py  graph_algorithms.py  homography.py  interpolation.py  kabsch.py  least_squares.py  lfsr.py  modular.py  reed_solomon.py  transformations.py
AAA20240302/scripts/: __init__.py  calibration_cli.py  graphs_cli.py  logic_cli.py
data/: __init__.py
data/samples/: __init__.py  dag_adj.json  dijkstra_adj.json  fsm1.json  fsm2.json  graph_edges.csv  points3d_dst.csv  points3d_src.csv  points_dst.csv
